--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>grid-home</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css"
+    integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" media="screen and (max-width:768px)" href="./tablet.css" />
@@ -14,21 +16,34 @@
 <body>
   <!-- navbar -->
 
-  <nav id="navbar" class="navbar">
+
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-      <ul>
-        <li><a class="active" href="#navbar">خانه</a></li>
-        <li><a href="#home-articles">مقالات پیشنهادی</a></li>
-        <li><a href="#footer">درباره ما</a></li>
-        <li><a href="#footer">تماس با ما</a></li>
-      </ul>
-      <h1 class="logo">
-        aryanpishro.ir
-        <img class="logo-image" src="./img/MOHR.png" alt="logo">
-      </h1>
+      
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">خانه</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">مقالات پیشنهادی</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">درباره ما</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link">تماس با ما</a>
+          </li>
+        </ul>
+      </div>
+      <a class="navbar-brand ms-auto" href="#"><img class="logo-image" src="./img/MOHR.png" alt="logo"></a>
     </div>
   </nav>
-
   <!-- showcase -->
 
   <div class="container">
@@ -139,7 +154,8 @@
       <div class="about">
         <h3>اشتراک و عضویت</h3>
         <p>
-          ما در «آرین پیشرو» تمام تلاش خودمون رو می‌کنیم تا سطح درآمد شما بالاتر بره. شما با شرکت در « آزمون های روانشناسی
+          ما در «آرین پیشرو» تمام تلاش خودمون رو می‌کنیم تا سطح درآمد شما بالاتر بره. شما با شرکت در « آزمون های
+          روانشناسی
           فردی و شغلی » می تونید به شناخت بهتری از خود و استعدادهای شغلی تون برسین و تصمیم درست‌تری برای روند کاری
           خودتون بگیرین.
         </p>
@@ -175,6 +191,11 @@
       </div>
     </div>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
