fix burger menu

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 
 
 
+ 
+
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
-      
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container-fluid container-md ">
+      <a class="navbar-brand ms-md-4" href="#"><img class="logo-image" src="./img/MOHR.png" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse ms-md-3" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">خانه</a>
@@ -34,14 +35,13 @@
             <a class="nav-link" href="#">مقالات پیشنهادی</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">درباره ما</a>
+            <a class="nav-link">درباره ما</a>
           </li>
           <li class="nav-item">
             <a class="nav-link">تماس با ما</a>
           </li>
         </ul>
       </div>
-      <a class="navbar-brand ms-auto" href="#"><img class="logo-image" src="./img/MOHR.png" alt="logo"></a>
     </div>
   </nav>
   <!-- showcase -->
