fix link navbar

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
       <div class="collapse navbar-collapse ms-md-3" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">خانه</a>
+            <a class="nav-link active" aria-current="page" href="#showcase">خانه</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">مقالات پیشنهادی</a>
+            <a class="nav-link" href="#home-articles">مقالات پیشنهادی</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">درباره ما</a>
+            <a class="nav-link" href="#footer">درباره ما</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">تماس با ما</a>
+            <a class="nav-link" href="#footer">تماس با ما</a>
           </li>
         </ul>
       </div>
