fix folders and logo icon

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>grid-home</title>
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/img/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css"
     integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="./style.css" />
-  <link rel="stylesheet" media="screen and (max-width:768px)" href="./tablet.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" media="screen and (max-width:768px)" href="assets/css/tablet.css" />
 </head>
 
 <body>
@@ -22,7 +23,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid container-md ">
-      <a class="navbar-brand ms-md-4" href="#"><img class="logo-image" src="./img/MOHR.png" alt="logo"></a>
+      <a class="navbar-brand ms-md-4" href="#"><img class="logo-image" src="./assets/img/MOHR.png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -67,7 +68,7 @@
       <h2>مقالات پیشنهادی</h2>
       <div class="articles-container">
         <article class="card card-1">
-          <img class="pic" src="./img/showcase copy.jpg" alt="" />
+          <img class="pic" src="./assets/img/showcase copy.jpg" alt="" />
           <div>
             <h3>
               <a href="article.html"> مشاور کسب و کار</a>
@@ -98,7 +99,7 @@
         </article>
 
         <article class="card card-3">
-          <img class="pic" src="./img/business-team-analyzing-income-charts-graphs.jpg" alt="" />
+          <img class="pic" src="./assets/img/business-team-analyzing-income-charts-graphs.jpg" alt="" />
           <div class="text-article">
             <h3>
               <a href="article.html"> مشاوره فروش و بازاریابی </a>
@@ -141,7 +142,7 @@
               بسیاری از فرصت های کسب و کار کوچک بر مجموعه مهارت‌های شما استوار هستند، از جمله مهارت‌های کامپیوتری.
             </p>
           </div>
-          <img class="pic" src="./img/entrepreneurs-discussing-work-results-meeting copy.jpg" alt="" />
+          <img class="pic" src="./assets/img/entrepreneurs-discussing-work-results-meeting copy.jpg" alt="" />
         </article>
       </div>
     </div>
